<resources>
    <string name="app_name" translatable="false">ArenaTournament</string>
    <string name="create_an_account">Create an account</string>
    <string name="return_button">Return</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone_number">Phone number</string>
    <string name="send">Send</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset password</string>
    <string name="logo">Logo</string>
    <string name="disconnect">Disconnect</string>
    <string name="error_name">Name required</string>
    <string name="error_surname">Surname required</string>
    <string name="error_email_required">Email required</string>
    <string name="error_email_invalid">Email invalid</string>
    <string name="error_password_required">Password required</string>
    <string name="error_password_invalid">Password must be at least 6 characters long</string>
    <string name="error_confirm_password_required">Confirmation required</string>
    <string name="error_confirm_password_invalid">Passwords are not corresponding</string>
    <string name="error_phone">Phone number required</string>
    <string name="error_phone_invalid">Phone number invalid</string>
    <string name="change_info">Change your information</string>
    <string name="unknown">Unknown</string>
    <string name="avatar">Avatar</string>
    <string name="change_password">Change Password</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="permission">Permission</string>
    <string name="explanation">Please provide permission to be allowed to change your avatar</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="tournament_available">Tournament available</string>
    <string name="add">add</string>
    <string name="update_info">Info Updated</string>
    <string name="create_tournament">Create Tournament</string>
    <string name="tournament_name">Name of Tournament</string>
    <string name="create">Create</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End date</string>
    <string name="number_teams">Number of Teams</string>
    <string name="number_player">Number of Player per Team</string>
    <string name="error_tournament_exist">Tournament already exist !</string>
    <string name="error_tournament_create_invalid">Please enter valid information</string>
    <string name="delete_account">Delete account</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Delete User</string>
    <string name="delete_message">Are you sure ?\nYou will delete your account</string>
    <string name="confirm">Confirm</string>
    <string name="account_create">Account Create…\n</string>
    <string name="error_login">Wrong Email or Password !</string>
    <string name="error_register_exist">User Already Exist !</string>
    <string name="join_tournament_title">Join Tournament</string>
    <string name="join_tournament_message">Do you want to join this tournament ?</string>
    <string name="board">Board</string>
    <string name="search_hint">Search a tournament</string>
    <string name="error_tournament_full">Tournament full</string>
    <string name="leave">Leave</string>
    <string name="about">About</string>
    <string name="default_number_teams" translatable="false">0/0</string>
    <string name="default_date" translatable="false">01/01/2000</string>
    <string name="name_team">Name of Team</string>
    <string name="join_team_title">Join Team</string>
    <string name="error_team_alreadyin">Can\'t join\nYou are already in a team</string>
    <string name="error_team_full">Team is full</string>
    <string name="join">join</string>
    <string name="name_player">Name of Player</string>
    <string name="join_team_message">Do you want to join this team ?</string>
    <string name="create_team">Create Team</string>
    <string name="create_team_message">Please enter the name of your team</string>
    <string name="default_phone" translatable="false">0611223344</string>
    <string name="send_message">Send Message</string>
    <string name="send_message_message">Please insert your message</string>
    <string name="message_confirm">Message send</string>
    <string name="error_send_message">Error ! Your message have not been sent…</string>
    <string name="permission_granted">Permission Granted !</string>
    <string name="permission_denied">Permission Denied !</string>
    <string name="leave_team_title">Leave Team</string>
    <string name="leave_team_message">Do you want to leave this team ?</string>
    <string name="delete_team_message">Do you really want to delete this team ?</string>
    <string name="delete_team_title">Delete Team</string>


</resources>