<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfilePlayerActivity">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/avatarImagePlayer"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/medium_tab"
        app:civ_border_color="#3f51b5"
        app:civ_border_width="0dp"
        app:civ_shadow_color="#3f51b5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/namesLabelPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_tab"
        android:text="@string/unknown"
        android:textColor="@color/secondaryTextColor"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/avatarImagePlayer"
        app:layout_constraintStart_toStartOf="@+id/avatarImagePlayer"
        app:layout_constraintTop_toBottomOf="@+id/avatarImagePlayer" />

    <Button
        android:id="@+id/sendMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryLightColor"
        android:text="@string/send_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneLabelPlayer"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/phoneLabelPlayer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/medium_tab"
        android:text="@string/phone_number"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/phoneNumberPlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namesLabelPlayer" />

    <TextView
        android:id="@+id/phoneNumberPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/default_phone"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/phoneLabelPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/phoneLabelPlayer"
        app:layout_constraintTop_toTopOf="@+id/phoneLabelPlayer" />

</androidx.constraintlayout.widget.ConstraintLayout>