<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TournamentSelectActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tournamentTabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInfo">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tournamentInfoTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/boardTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/tournament_name" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tournamentTabs"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>