<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatarImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/avatar"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/namesLabelAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/avatarImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toEndOf="@+id/avatarImage"
                app:layout_constraintTop_toTopOf="@+id/avatarImage" />

            <TextView
                android:id="@+id/changeInfoLabelAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topLogo"
                android:text="@string/change_info"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatarImage" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surnameInputAccount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/surname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changeInfoLabelAccount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surnameTxtAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputAccount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="@+id/surnameInputAccount"
                app:layout_constraintStart_toStartOf="@+id/surnameInputAccount"
                app:layout_constraintTop_toBottomOf="@+id/surnameInputAccount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameTxtAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneInputAccount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/phone_number"
                app:layout_constraintEnd_toEndOf="@+id/nameInputAccount"
                app:layout_constraintStart_toStartOf="@+id/nameInputAccount"
                app:layout_constraintTop_toBottomOf="@+id/nameInputAccount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneTxtAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sendButtonAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/topLogo"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/topLogo"
                android:text="@string/send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneInputAccount"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <View
                android:id="@+id/divider"
                android:layout_width="478dp"
                android:layout_height="1dp"
                android:layout_marginTop="32dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sendButtonAccount" />

            <TextView
                android:id="@+id/changePasswordAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/change_password"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputAccount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changePasswordAccount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTxtAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmInputAccount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInputAccount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmTxtAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/changePasswordButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/topLogo"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/topLogo"
                android:layout_marginBottom="32dp"
                android:text="@string/send"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmInputAccount" />

            <Button
                android:id="@+id/disconnectButtonAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondaryColor"
                android:text="@string/disconnect"
                app:layout_constraintBottom_toTopOf="@+id/changeInfoLabelAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatarImage"
                app:layout_constraintTop_toBottomOf="@+id/namesLabelAccount" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>