<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTeam"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/imageTeam"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/tournament"
            android:contentDescription="@string/tournament_name" />
    </androidx.cardview.widget.CardView>


    <View
        android:id="@+id/separationTeam"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <TextView
        android:id="@+id/nameTeamTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/name_team"
        android:textColor="@color/secondaryTextColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/separationTeam"
        app:layout_constraintStart_toEndOf="@+id/cardViewTeam" />

    <TextView
        android:id="@+id/numberTeamTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/default_number_teams"
        android:textColor="@color/grey"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/cardViewTeam"
        app:layout_constraintTop_toBottomOf="@+id/separationTeam"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>